@@ -23,6 +23,7 @@ Verilator 4.211 devel
 * Parameter values are now emitted as 'static constexpr' instead of enum.
   C++ direct references to parameters might require updating (#3077). [Geza Lore]
 * Refactored Verilated include files; include verilated.h not verilated_heavy.h.
+* Add error when constant function under a generate (#3103). [Don Owen]
 * Fix -G to treat simple integer literals as signed (#3060). [Anikin1610]
 * Fix emitted string array initializers (#2895). [Iztok Jeras]
 * Fix bitop tree optimization dropping necessary & operator (#3096). [Flavien Solt]
